Apache ManifoldCF Plugin for Elastic Search change Log
$Id$

======================= 1.2-SNAPSHOT =====================

======================= Release 1.1 =====================

Add functionality making the plugin compatible with multi-domain
features of ManifoldCF.  Specifically, create method signatures that
allow multiple domain/username pairs to be passed in.
(Karl Wright)

======================= Release 0.1 =====================

Added the path.data parameter in the ElasticSearch server: now the data folder is created under the target folder
(Karl Wright, Piergiorgio Lucidi)

Initial commit.
(Karl Wright)