@@ -3,6 +3,10 @@ $Id$
 
 ======================= 1.2-SNAPSHOT =====================
 
+CONNECTORS-886: Add support for parent security.  This
+change requires reindexing of all content supported by this plugin.
+(Karl Wright)
+
 ======================= Release 1.1 =====================
 
 Add functionality making the plugin compatible with multi-domain
